--- a/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/EditGroupBuy.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/EditGroupBuy.razor
@@ -385,38 +385,12 @@
             <div class="col-2">@L["PaymentMethod"]</div>
             <div class="col-4">  
                 <div class="form-check">
-                    <input type="radio" class="form-check-input" name="PaymentGateway" id="payment-gateway-1" checked="@EditGroupBuyDto.IsDefaultPaymentGateWay" @onclick="() => EditGroupBuyDto.IsDefaultPaymentGateWay = true" />
-                    <label class="form-check-label" for="payment-gateway-1">
-                        @L["DefaultPaymentGateWay"]
-                    </label>
+                    <Check TValue="bool" @bind-Checked="@CreditCard">@L["CreditCard"]</Check>
+                   <Check TValue="bool" @bind-Checked="@BankTransfer">@L["Transfer"]</Check>
                 </div>
             </div>
         </div>
-        <div class="row">
-            <div class="col-2"></div>
-            <div class="col-2"></div>
-            <div class="col-1">    
-                <div class="form-check">
-                    <input type="radio" class="form-check-input" name="PaymentGateway" id="payment-gateway-2" checked="@(!EditGroupBuyDto.IsDefaultPaymentGateWay)" @onclick="() => EditGroupBuyDto.IsDefaultPaymentGateWay = false" />
-                </div>
-            </div>
-            <div class="col-7">
-                <div class="col-7 form-control"  style="background-color:white">
-                    @foreach (var item in PaymentMethodTags)
-                    {
-                        <Badge class="item-tags" CloseClicked="@(() => HandlePaymentTagDelete(item))">@item</Badge>
-                    }
-
-                    <div class="input-container">
-                        <input type="text" id="tag-input" class="tag-input" placeholder="New Tag"
-                        @bind-value="PaymentTagInputValue"
-                        @onkeyup="HandlePaymentTagInputKeyUp" />
-                        <i class="tag-input-placeholder-icon fa fa-plus"></i>
-                    </div>
-                </div>
-                <span class="text-danger">@PaymentMethodError</span>
-            </div>         
-        </div>
+       
         <div class="row">
             <div class="col-2">@L["Invoice"]</div>
             <div class="col-2">@L["IssueInvoice"]</div>
