--- a/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/EditGroupBuy.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/EditGroupBuy.razor
@@ -384,10 +384,10 @@
             <div class="col-2">@L["Gateway"]</div>
             <div class="col-2">@L["PaymentMethod"]</div>
             <div class="col-4">  
-                <div class="form-check">
-                    <Check TValue="bool" @bind-Checked="@CreditCard">@L["CreditCard"]</Check>
-                   <Check TValue="bool" @bind-Checked="@BankTransfer">@L["Transfer"]</Check>
-                </div>
+               
+                    <Check   TValue="bool" @bind-Checked="@CreditCard">@L["CreditCard"]</Check>
+                   <Check  TValue="bool" @bind-Checked="@BankTransfer">@L["BnakTransfer"]</Check>
+               
             </div>
         </div>
        
