--- a/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/CreateGroupBuy.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/CreateGroupBuy.razor
@@ -400,7 +400,7 @@
                     <label class="form-check-label" for="payment-gateway-1">
                         @L["DefaultPaymentGateWay"]
                     </label> *@
-                   <Check style="margin-left: 0px;" TValue="bool" @bind-Checked="@CreditCard">@L["CreditCard"]</Check>
+                   <Check  TValue="bool" @bind-Checked="@CreditCard">@L["CreditCard"]</Check>
                    <Check TValue="bool" @bind-Checked="@BankTransfer">@L["BankTransfer"]</Check>
        @*              <Radio Inline TValue="string" CheckedChanged="@OnCreditCardChecked"   Value="@("CreditCard")">@L["CreditCard"]</Radio>
                     <Radio Inline TValue="string"  CheckedChanged="@OnTransferChecked"  Value="@("Transfer")">@L["Transfer"]</Radio> *@
